<resources>
    <string name="app_name" translatable="false">AllergySavvy</string>
    <string name="on_boarding_title_1">Welcome to AllergySavvy!</string>
    <string name="on_boarding_description_1">Welcome to AllergySavvy, your smart assistant for allergy-aware cooking! Enjoy personalized recipe recommendations, ingredient tracking to avoid allergens, and easy-to-follow cooking tips. We\'re here to make your cooking safe and enjoyable.</string>
    <string name="on_boarding_description_2">Set up your profile by entering your specific allergies (e.g., nuts, dairy, gluten). Receive tailored recipes that meet your needs, ensuring every meal is safe and delicious.</string>
    <string name="on_boarding_title_2">Personalize Your Experience</string>
    <string name="on_boarding_title_3">Discover\nAllergy-Safe Recipes</string>
    <string name="on_boarding_description_3">Explore a variety of recipes filtered to avoid your allergens. Follow step-by-step instructions and get tips for substituting common allergens.Enjoy a worry-free cooking experience with AllergySavvy!</string>
    <string name="welcome_title">AllergySavvy Smart Solutions for Allergy-Aware Cooking</string>
    <string name="welcome_description">AllergySavvy helps you create delicious, allergy-safe meals with personalized recipes, allergen tracking, and easy cooking tips. Enjoy safe meals tailored to your allergy needs.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_hint">Enter Your Email</string>
    <string name="password_hint">Enter Your Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="not_have_account">Don’t Have An Account ?</string>
    <string name="full_name_hint">Enter Your Full Name</string>
    <string name="already_have_account">Already Have Account ?</string>
    <string name="category_title_choose_category">Choose Your Category</string>
    <string name="please_choose_category">Please choose your category</string>
    <string name="non_allergy">Non-Allergy</string>
    <string name="allergy">Allergy</string>
    <string name="next">Next</string>
    <string name="category_title_fill_form">Fill The Form</string>
    <string name="enter_allergy_food_ingredients">Enter your allergy food ingredients</string>
    <string name="enter_ingredient_hint">Enter Ingredient</string>
    <string name="home_fragment_banner_title">healthy food for your life</string>
    <string name="populer_ingredients_title">Popular Ingredients</string>
    <string name="popular_recipes_title">Popular Recipes</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="shape_image_1">shape image 1</string>
    <string name="image_banner_slide_1">image banner slide 1</string>
    <string name="image_banner_slide_2">image banner slide 2</string>
    <string name="title_favorite">Favorite\n</string>
    <string name="title_profile">Profile</string>
    <string name="image_login">image login</string>
    <string name="image_register">image register</string>
    <string name="email_pattern">[a-zA-Z0-9._-]+@[a-z]+\\.+[a-z]+</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="username_cannot_be_empty">Username cannot be empty</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters long</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="started">Let\'s get started!</string>
    <string name="title_video">Video</string>
    <string name="title_ingredient">Ingredient</string>
    <string name="tv_title_fragment_video">What do you want to cook today?</string>
    <string name="tv_title_ingredient">What is in your kitchen?</string>
    <string name="search_hint_ingredient">Search Your Ingredient</string>
    <string name="title_tv_fragment_favorite">Your Favorite Recipes</string>
    <string name="hint_search_recipe">Search Your Recipe</string>
    <string name="title_tv_fragment_profile">My Profile</string>
    <string name="title_setting_profile_fragment">Setting</string>
    <string name="title_account_profile_fragment">Account</string>
    <string name="title_action_profile_fragment">Action</string>
    <string name="text_button_edit_profile">Edit Profile</string>
    <string name="text_edit_language_fragment_profile">Language</string>
    <string name="text_edit_theme_fragment_profile">Theme</string>
    <string name="logout">Logout</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="recipes_name">Recipes Name</string>
    <string name="set_favorite_ingredient">Set Favorite Ingredient</string>
    <string name="username">Username</string>
    <string name="user_bio">User Bio</string>
    <string name="duration">Duration</string>
    <string name="views">Views</string>
    <string name="chanel_video">Chanel Video</string>
    <string name="thumbnail_video">Thumbnail Video</string>
    <string name="icon_ingredient">Icon ingredient</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="title_banner_home_fragment">Healthy\nFood For\nYour Life</string>
    <string name="welcome_with_coma">Welcome,</string>
    <string name="recent_recipes">Recent Recipes</string>
    <string name="recent_ingredients">Recent Ingredients</string>
    <string name="shape_image_banner_home_fragment">Shape image banner home fragment</string>
    <string name="image_banner_home_fragment">Image banner home fragment</string>
    <string name="transition_background">Transition background</string>
    <string name="photo_recipes">Photo recipes</string>
    <string name="title_recipes">Title Recipes</string>
    <string name="location_recipes">Location Recipes</string>
    <string name="recipes_description">Recipes Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredients_list">Ingredients list</string>
    <string name="steps">Steps</string>
    <string name="steps_description_list">Steps description list</string>
    <string name="save_favorite_recipes">Save favorite recipes</string>
    <string name="back_button_description">Back to list recipes</string>
    <string name="hello">Hello,</string>
    <string name="icon_form_ingredient">Icon form ingredient</string>
    <string name="let_us_know_we_ll_recommend_recipes_that_are_safe_for_you">Let us know, we\'ll recommend recipes that are safe for you.</string>
    <string name="please_enter_the_ingredients_of_your_allergy_food">Please enter the ingredients of your allergy food</string>
    <string name="title_edit_profile_activity">Edit Profile</string>
    <string name="icon_username_edit_profile">Icon username edit profile</string>
    <string name="edit_username_profile">Edit username profile</string>
    <string name="edit_user_info">Edit user info</string>
    <string name="info">Info</string>
    <string name="user_info">User info</string>
    <string name="icon_user_info">Icon user info</string>
    <string name="oops">Oops!</string>
    <string name="sorry_the_video_cannot_be_loaded_at_this_time_try_again_later">Sorry, the video cannot be loaded at this time. Try again later</string>
    <string name="icon_error_video_fragment">icon error video fragment</string>
    <string name="try_again">Try Again</string>
    <string name="error_messege">Error Messege</string>
    <string name="error_photo_icon">Error photo icon</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_pohoto_profile">Add pohoto profile</string>
    <string name="send_ingredient">Send ingredient</string>

</resources>