<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.allergysavvy.ui.main.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.capstone.allergysavvy.ui.main.fragment.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.capstone.allergysavvy.ui.main.fragment.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_ingredient"
        android:name="com.capstone.allergysavvy.ui.main.fragment.ingredient.IngredientFragment"
        android:label="@string/title_ingredient"
        tools:layout="@layout/fragment_ingredient">
        <action
            android:id="@+id/action_navigation_ingredient_to_recipeFragment"
            app:destination="@id/recipeFragment">
            <argument
                android:name="selectedIngredients"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/navigation_video"
        android:name="com.capstone.allergysavvy.ui.main.fragment.video.VideoFragment"
        android:label="@string/title_video"
        tools:layout="@layout/fragment_video" />
    <fragment
        android:id="@+id/recipeFragment"
        android:name="com.capstone.allergysavvy.ui.main.fragment.ingredient.recipe.RecipeFragment"
        android:label="fragment_recipe"
        tools:layout="@layout/fragment_recipe" />
</navigation>